--- a/styles/bio.css
+++ b/styles/bio.css
@@ -219,13 +219,11 @@ h3 {
     flex-direction: row;
     padding-left: 36px;
     padding-right: 36px;
-    padding-top: 36px;
-    padding-bottom: 36px;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
   .header__logo {
     font-size: 24px;
-    line-height: 32px;
-    font-weight: 600;
   }
   .header__nav {
     justify-content: flex-start;
@@ -234,17 +232,20 @@ h3 {
   }
   .header__nav-title {
     justify-content: flex-start;
-    padding: 0px 20px;
     font-size: 14px;
     line-height: 22px;
     font-weight: 400;
+    padding: 0px 0px;
+    padding-left: 50px;
+  }
+  .header__image {
+    height: 450px;
   }
   .header__image-title {
     padding-left: 36px;
     padding-right: 36px;
     font-size: 60px;
     line-height: 68px;
-    font-weight: 700;
   }
   .main__content {
     padding-left: 36px;
@@ -256,36 +257,38 @@ h3 {
     padding-bottom: 24px;
     font-size: 36px;
     line-height: 44px;
-    font-weight: 700;
+    color: #323232;
   }
   .musician__quote {
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 400;
-    font-weight: bold;
+    font-size: 22px;
+    line-height: 1.3;
+    padding-top: 28px;
+  }
+  .musician__quote--name {
+    padding-top: 10px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+  .musician__image-container {
+    height: 310px;
   }
   .musician__image {
-    padding-left: 36px;
-    padding-right: 36px;
     padding-left: 48px;
     padding-right: 48px;
+    transform: translateY(-14%);
   }
   .musician__text {
-    padding-bottom: 32px;
-  }
-  .paragraph__subheader {
-    font-size: 24px;
-    line-height: 32px;
-    font-weight: 600;
+    padding-left: 48px;
+    padding-right: 48px;
   }
   .paragraph__sections {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 15px;
+    gap: 20px;
   }
   .paragraph__text {
-    padding-top: 16px;
+    padding-top: 0px;
     font-size: 14px;
     line-height: 22px;
     font-weight: 400;
@@ -296,21 +299,37 @@ h3 {
     justify-content: space-between;
     padding-left: 0px;
     padding-right: 0px;
+    padding-bottom: 16px;
   }
   .photo {
     width: 30%;
-    padding-bottom: 24px;
+    padding-bottom: 22px;
+    height: 124px;
   }
   .footer {
     padding-left: 36px;
     padding-right: 36px;
   }
+  .footer__subtitle {
+    font-size: 36px;
+    line-height: 44px;
+    padding-top: 42px;
+    padding-bottom: 0;
+  }
   .social-media {
     display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+  .social-media__logo {
+    width: 25px;
+    height: 25px;
   }
   .apps {
     justify-content: center;
     align-items: center;
+    gap: 24px;
+    padding-top: 50px;
   }
   .footer {
     font-size: 14px;
@@ -318,7 +337,11 @@ h3 {
     font-weight: 400;
   }
   .copyright--tablet {
-    display: contents;
+    display: block;
+    margin-left: auto;
+    font-weight: 100;
+    font-size: 24px;
+    padding-top: 40px;
   }
   .contact__info {
     display: flex;
@@ -326,9 +349,14 @@ h3 {
     justify-content: space-between;
     align-items: center;
   }
+  .contact__title--modified {
+    padding-top: 20px;
+  }
   .copyright {
     padding-left: 0;
-    padding-bottom: 80px;
+    padding-bottom: 50px;
+    font-size: 14px;
+    padding-top: 18px;
   }
   .copyright--mobile {
     display: none;
